--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -17,8 +17,16 @@
   "youtube": "YouTube",
   "loading_hint": "请耐心等待，解析可能需要较长时间",
   "select_plan": "请选择订阅时长",
+  "month": "月",
+  "year": "年",
   "follow": "订 阅",
   "unfollow": "取消订阅",
   "unfollow_reason": "订阅结束原因",
-  "refollow": "再次订阅"
+  "refollow": "再次订阅",
+  "following": "正在关注",
+  "history": "已过期",
+  "settings": "设 置",
+  "time": "时间",
+  "current_utc": "当前设置为 UTC",
+  "change": "更 改"
 }
