--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -36,5 +36,8 @@
   "pay": "支 付",
   "manual_cancel": "取消订阅",
   "feed_expired": "订阅到期",
-  "select_utc": "请选择 UTC 时区"
+  "select_utc": "请选择 UTC 时区",
+  "parse_error": "解析失败：请检查输入内容与当前搜索类型是否匹配",
+  "auth_failed": "授权失败",
+  "back_homepage": "返回首页"
 }
