--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -39,5 +39,6 @@
   "select_utc": "Please Select UTC",
   "parse_error": "Parsing failed: Please check that the input matches the current search type",
   "auth_failed": "Authorization Failed",
-  "back_homepage": "Back to Homepage"
+  "back_homepage": "Back to Homepage",
+  "no_records": "No Records"
 }
