--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -40,5 +40,7 @@
   "parse_error": "Parsing failed: Please check that the input matches the current search type",
   "auth_failed": "Authorization Failed",
   "back_homepage": "Back to Homepage",
-  "no_records": "No Records"
+  "no_records": "No Records",
+  "checking_unfollow": "Checking The Unfollow Result...",
+  "checking_pay": "Checking The Payment's Result..."
 }
