--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -40,5 +40,7 @@
   "parse_error": "解析失败：请检查输入内容与当前搜索类型是否匹配",
   "auth_failed": "授权失败",
   "back_homepage": "返回首页",
-  "no_records": "无订阅记录"
+  "no_records": "无订阅记录",
+  "checking_unfollow": "正在检查取关结果...",
+  "checking_pay": "正在检查支付结果..."
 }
