optimize copy && language change && json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -5,55 +5,55 @@
   "desc": "Description",
   "expire_date": "Expiration Date",
   "current_type": "Current Search Type",
-  "oak_ph": "Oak Topic name here",
-  "rss_ph": "RSS feed url here",
-  "weibo_ph": "Weibo id here",
+  "oak_ph": "OTH URI here",
+  "rss_ph": "Feed URL here",
+  "weibo_ph": "Weibo ID here",
   "twitter_ph": "Twitter username here",
-  "youtube_ph": "YouTube id here",
+  "youtube_ph": "Youtube ID here",
   "oak": "Oak Hub Topic",
   "rss": "Feed URL",
   "weibo": "Weibo",
   "twitter": "Twitter",
   "youtube": "YouTube",
-  "loading_hint": "Please wait, this may need some time.",
+  "loading_hint": "Please wait, it may take a while",
   "select_plan": "Please select",
   "month": "month",
   "year": "year",
-  "follow": "Follow",
-  "unfollow": "Unfollow",
-  "unfollow_reason": "Unfollow Reason",
-  "refollow": "Refollow",
-  "following": "Following",
+  "follow": "Subscribe",
+  "unfollow": "Unsubscribe",
+  "unfollow_reason": "Unsubscribed reason",
+  "refollow": "Subscribe again",
+  "following": "Subsribed",
   "history": "History",
   "settings": "Settings",
   "time": "Time",
-  "current_utc": "Current is UTC",
+  "current_utc": "Current setting is UTC",
   "change": "Change",
-  "owner_login": "Owner's Auth is Required",
-  "subcribe_price": "Subscription Price",
+  "owner_login": "Owner's auth is required",
+  "subcribe_price": "Total price",
   "cancel": "Cancel",
   "confirm": "Confirm",
   "pay": "Pay",
-  "manual_cancel": "Unfollow",
-  "feed_expired": "Subscription Expires",
+  "manual_cancel": "Unsubscribed",
+  "feed_expired": "Expired ",
   "select_utc": "Please Select UTC",
-  "parse_error": "Parsing failed: Please check that the input matches the current search type",
+  "parse_error": "Parsing failed. Please check that the input matches the current search type",
   "auth_failed": "Authorization Failed",
   "back_homepage": "Back to Homepage",
-  "no_records": "No Records",
-  "checking_unfollow": "Checking The Unfollow Result...",
-  "checking_pay": "Checking The Payment's Result...",
-  "subcribe_success": "Subscribe Successfully!",
-  "unfollow_success": "Unfollow Successfully!",
-  "setting_update": "Setting Updated!",
-  "pay_with_phone": "Please Scan With MM",
-  "has_paid": "Already Paid",
-  "push_date": "Last Push Time",
-  "crawl_date": "Last Source Update",
+  "no_records": "No record",
+  "checking_unfollow": "Checking the unsubscribe result...",
+  "checking_pay": "Checking the payment result...",
+  "subcribe_success": "Subscribe successfully!",
+  "unfollow_success": "Unsubscribe successfully!",
+  "setting_update": "Setting updated!",
+  "pay_with_phone": "Please scan with Mixin Messenger",
+  "has_paid": "Have paid",
+  "push_date": "Last pushed",
+  "crawl_date": "Last fetched",
   "copy": "Copy",
-  "source_uri": "Source Uri",
-  "copy_success": "Copy Success",
-  "try_again": "Copy Failed. Please Try Again",
-  "will_expire": "Expire Soon",
-  "renew": "Renew"
+  "source_uri": "Source URI",
+  "copy_success": "Successfully copied",
+  "try_again": "Failed to copy, please try again",
+  "will_expire": "Due soon",
+  "renew": "Renewal"
 }
