--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -3,15 +3,15 @@
   "login": "请登录",
   "logout": "退出登录",
   "desc": "简介",
-  "expire_date": "过期时间",
+  "expire_date": "到期时间",
   "current_type": "当前搜索类型",
-  "oak_ph": "请输入 Oak Hub 主题名",
-  "rss_ph": "请输入 RSS 源地址",
+  "oak_ph": "请输入 OTH 地址",
+  "rss_ph": "请输入 RSS/ATOM 地址",
   "weibo_ph": "请输入微博用户 ID",
   "twitter_ph": "请输入 Twitter 用户名",
   "youtube_ph": "请输入 YouTube 频道 ID",
-  "oak": "Oak Hub 主题",
-  "rss": "RSS 源地址",
+  "oak": "橡树中心主题",
+  "rss": "Feed 地址",
   "weibo": "微博",
   "twitter": "Twitter",
   "youtube": "YouTube",
@@ -21,39 +21,39 @@
   "year": "年",
   "follow": "订 阅",
   "unfollow": "取消订阅",
-  "unfollow_reason": "订阅结束原因",
+  "unfollow_reason": "取关原因",
   "refollow": "再次订阅",
-  "following": "正在关注",
-  "history": "已过期",
+  "following": "订阅中",
+  "history": "历史订阅",
   "settings": "设 置",
   "time": "时间",
   "current_utc": "当前设置为 UTC",
   "change": "更 改",
   "owner_login": "需群主授权",
-  "subcribe_price": "订阅价格",
+  "subcribe_price": "合计价格",
   "cancel": "取 消",
   "confirm": "确 认",
   "pay": "支 付",
-  "manual_cancel": "取消订阅",
-  "feed_expired": "订阅到期",
+  "manual_cancel": "主动退订",
+  "feed_expired": "订阅过期",
   "select_utc": "请选择 UTC 时区",
-  "parse_error": "解析失败：请检查输入内容与当前搜索类型是否匹配",
+  "parse_error": "解析失败。请检查输入内容与当前搜索类型是否匹配",
   "auth_failed": "授权失败",
   "back_homepage": "返回首页",
-  "no_records": "无订阅记录",
+  "no_records": "无记录",
   "checking_unfollow": "正在检查取关结果...",
   "checking_pay": "正在检查支付结果...",
   "subcribe_success": "订阅成功！",
-  "unfollow_success": "取关成功！",
+  "unfollow_success": "退订成功！",
   "setting_update": "设置成功！",
   "pay_with_phone": "请用手机扫码",
   "has_paid": "已支付",
-  "push_date": "上次推送时间",
-  "crawl_date": "上次获取源时间",
+  "push_date": "上次推送",
+  "crawl_date": "上次抓取",
   "copy": "复 制",
   "source_uri": "源地址",
   "copy_success": "复制成功",
   "try_again": "复制失败，请重试",
   "will_expire": "即将到期",
-  "renew": "我要续费"
+  "renew": "续 订"
 }
