fix auth back lang

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -22,12 +22,12 @@
   "follow": "Subscribe",
   "unfollow": "Unsubscribe",
   "unfollow_reason": "Unsubscribed reason",
-  "refollow": "Subscribe again",
-  "following": "Subsribed",
+  "refollow": "Subscribe",
+  "following": "Subscriptions",
   "history": "History",
   "settings": "Settings",
   "time": "Time",
-  "current_utc": "Current setting is UTC",
+  "current_utc": "Current is UTC",
   "change": "Change",
   "owner_login": "Owner's auth is required",
   "subcribe_price": "Total price",
@@ -36,7 +36,7 @@
   "pay": "Pay",
   "manual_cancel": "Unsubscribed",
   "feed_expired": "Expired ",
-  "select_utc": "Please Select UTC",
+  "select_utc": "Please Select",
   "parse_error": "Parsing failed. Please check that the input matches the current search type",
   "auth_failed": "Authorization Failed",
   "back_homepage": "Back to Homepage",
