optimize theme init && optimize error json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -37,7 +37,16 @@
   "manual_cancel": "Unsubscribed",
   "feed_expired": "Expired ",
   "select_utc": "Please Select",
-  "parse_error": "Parsing failed. Please check that the input matches the current search type",
+  "oak_parse_error": "Parsing failed: Please check that the input matches OTH, or try again",
+  "weibo_parse_error": "Parsing failed: Please check that the input Weibo ID exist, or try again",
+  "twitter_parse_error": "Parsing failed: Please check that the input Twitter ID exist, or try again",
+  "rss_parse_error": "Parsing failed: Please check that the input RSS/Atom url exist, or try again",
+  "youtube_parse_error": "Parsing failed: Please check that the input YouTube ID exist, or try again",
+  "oak_validate_error": "Validate failed: Current input is not start with oth:",
+  "weibo_validate_error": "Validate failed: Current input is not a valid Weibo ID",
+  "twitter_validate_error": "Validate failed: Current input is not a valid Twitter ID",
+  "rss_validate_error": "Validate failed: Current input is not a valid RSS/Atom url",
+  "youtube_validate_error": "Validate failed: Current input is not a valid YouTube ID",
   "auth_failed": "Authorization Failed",
   "back_homepage": "Back to Homepage",
   "no_records": "No record",
