--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -37,7 +37,16 @@
   "manual_cancel": "主动退订",
   "feed_expired": "订阅过期",
   "select_utc": "请选择 UTC 时区",
-  "parse_error": "解析失败。请检查输入内容与当前搜索类型是否匹配",
+  "oak_parse_error": "解析失败：请检查输入内容是否为橡树中心主题地址，或者重试",
+  "weibo_parse_error": "解析失败：请检查输入内容是否为微博用户 ID，或者重试",
+  "twitter_parse_error": "解析失败：请检查输入内容是否为 Twiiter 用户 ID，或者重试",
+  "rss_parse_error": "解析失败：请检查输入内容是否为 RSS/Atom 地址，或者重试",
+  "youtube_parse_error": "解析失败：请检查输入内容是否为 YouTube 用户 ID，或者重试",
+  "oak_validate_error": "校验失败：当前输入未以 oth: 开头",
+  "weibo_validate_error": "校验失败：当前输入不是一个有效的微博 ID",
+  "twitter_validate_error": "校验失败：当前输入不是一个有效的 Twitter ID",
+  "rss_validate_error": "校验失败：当前输入不是一个有效的 RSS/Atom 地址",
+  "youtube_validate_error": "校验失败：当前输入不是一个有效的 YouTube ID",
   "auth_failed": "授权失败",
   "back_homepage": "返回首页",
   "no_records": "无记录",
