group data persistence & tooltip

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -31,6 +31,7 @@
   "change": "Change",
   "owner_login": "Owner's auth is required",
   "subcribe_price": "Total price",
+  "price_desc": "(Topic fee & Deliver fee)",
   "cancel": "Cancel",
   "confirm": "Confirm",
   "pay": "Pay",
