--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -31,6 +31,7 @@
   "change": "更 改",
   "owner_login": "需群主授权",
   "subcribe_price": "合计价格",
+  "price_desc": "（主题费+递信服务费）",
   "cancel": "取 消",
   "confirm": "确 认",
   "pay": "支 付",
