--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -61,6 +61,7 @@
   "has_paid": "已支付",
   "push_date": "上次推送",
   "crawl_date": "上次抓取",
+  "update_date": "最近更新",
   "copy": "复 制",
   "source_uri": "源地址",
   "copy_success": "复制成功",
