--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -67,5 +67,6 @@
   "copy_success": "复制成功",
   "try_again": "复制失败，请重试",
   "will_expire": "即将到期",
-  "renew": "续 订"
+  "renew": "续 订",
+  "hot_now": "当前热门"
 }
