--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -67,5 +67,6 @@
   "copy_success": "Successfully copied",
   "try_again": "Failed to copy, please try again",
   "will_expire": "Due soon",
-  "renew": "Renewal"
+  "renew": "Renewal",
+  "hot_now": "Hot Now"
 }
