--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,13 +2,13 @@
   "colon": ": ",
   "home": "Home",
   "me": "Me",
-  "login": "Please Login",
+  "login": "Login",
   "logout": "Logout",
   "desc": "Description",
   "expire_date": "Expiration Date",
-  "current_type": "Current Search Type",
-  "oak_ph": "OTH URI here",
-  "rss_ph": "Feed URL here",
+  "current_type": "Search Type",
+  "oak_ph": "OTH URI here oth:",
+  "rss_ph": "Atom/RSS URL here",
   "weibo_ph": "Weibo ID here",
   "twitter_ph": "Twitter username here",
   "youtube_ph": "Youtube ID here",
