--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -2,13 +2,13 @@
   "colon": "：",
   "home": "首页",
   "me": "我的",
-  "login": "请登录",
+  "login": "登录",
   "logout": "退出登录",
   "desc": "简介",
   "expire_date": "到期时间",
-  "current_type": "当前搜索类型",
-  "oak_ph": "请输入 OTH 地址",
-  "rss_ph": "请输入 RSS/ATOM 地址",
+  "current_type": "搜索类型",
+  "oak_ph": "请输入 OTH 地址 oth:",
+  "rss_ph": "请输入 Atom/RSS 地址",
   "weibo_ph": "请输入微博用户 ID",
   "twitter_ph": "请输入 Twitter 用户名",
   "youtube_ph": "请输入 YouTube 频道 ID",
